fix cta button visibility

--- a/style.css
+++ b/style.css
@@ -182,8 +182,8 @@ ul {
   font-weight: 700;
 }
 
-#cta-signup {
-  border: 1px solid #f9faf8;
+#cta-button {
+  border: 2px solid #f9faf8;
 }
 
 .footer {
